fix: part functional add to service
