# src/resources/words/word.service.js
@@ -1,7 +1,14 @@
 const wordsRepo = require('./word.memory.repository');
+const Word = require('./word.model');
 
-const getAll = () => wordsRepo.getAll();
+const getAll = async () => {
+  const words = await wordsRepo.getAll();
+  return words.map(Word.toResponse).length;
+};
 
-const postWord = async word => wordsRepo.post(word);
+const postWord = async word => {
+  const wordNew = await new Word(word);
+  return await wordsRepo.post(wordNew);
+};
 
 module.exports = { getAll, postWord };
